--- a/Day4-assignment/Ass2/package.json
+++ b/Day4-assignment/Ass2/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
+    "Dev" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
